@@ -44,6 +44,7 @@
 #define PERSIST_FLAG_RECONNECT      0x0002
 #define PERSIST_FLAG_ALREADY_INITED 0x0004
 #define PERSIST_FLAG_P_USER_CASE    0x0008
+#define PERSIST_FLAG_SUPPRESS_ERR   0x0010
 
 typedef enum {
 	PERSIST_TYPE_NONE = 0,
